--- a/index.html
+++ b/index.html
@@ -23,10 +23,16 @@
                     <nav class="classy-navbar justify-content-between" id="alimeNav">
                         <a class="nav-brand" href="./index.html"></a>
 
-                    
+                     <!-- Navbar Toggler -->
+                     <div class="classy-navbar-toggler">
+                        <span class="navbarToggler"><span></span><span></span><span></span></span>
+                    </div>
 
                         <!-- Menu -->
                         <div class="classy-menu">
+                            <div class="classycloseIcon">
+                                <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
+                            </div>
                             <!-- Menu Close Button -->
                             <div class="classycloseIcon">
                                 <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
